@@ -161,7 +161,8 @@
         cooling_base = 65, degree_F
 
     [[Trend]]
-        time_delta = 10800  # 3 hours 
+        time_delta = 10800  # 3 hours
+        time_grace = 300    # 5 minutes 
         
 ###############################################################################
 
